update media queries and site SEO

--- a/about.html
+++ b/about.html
@@ -10,8 +10,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
-    <title>About Yinsu</title>
+    <meta name="description" content="Know more about front-end developer Yinsu, her projects and contact details.">
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>More information about front-end developer Yinsu</title>
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 ps-5">
@@ -63,7 +64,7 @@
     <br />
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:xxx@gmail.com" class="email-link"> xxx@gmail.com</a>
+      <a href="mailto:xxx@gmail.com" class="email-link" title="email-link"> xxx@gmail.com</a>
     </div>
   </body>
 </html>
