--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yinsu</title>
+    <meta name="description" content="Front-end developer Yinsu and her projects">
     <link rel="stylesheet" href="src/styles.css" />
-   
+    <title>London Front-end developer-Yinsu</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 ps-5 fixed-top>
@@ -47,16 +47,16 @@
     <h1>Yinsu</h1>
     <h3>🇨🇳 Front-end developer, based in London</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="contact-link">Contact me</a>
+      <a href="about.html" class="about-link" title="about-link">About me</a>
     </div>
     <br/>
     <div class="container">
       <div class="row">
-          <div class="col-sm-6  ">
-            <img src="https://31ukq.csb.app/images/yoga.png" class="img-fluid rounded" alt="yoga">
+          <div class="col-sm-6">
+            <img src="https://31ukq.csb.app/images/yoga.png" class="img-fluid rounded small-photo" alt="yoga">
           </div>
-          <div class="col-sm-6  ">
+          <div class="col-sm-6">
             <h2 class="text-start ps-3">Yoga app</h2>
             <p class="bg-white text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
           <a href="#" class="app-link m-20 py-20 px-15 text-start">Launch Yoga App</a>
@@ -68,14 +68,14 @@
       <br />
       <div class="container">
           <div class="row">
-                <div class="col-sm-6  ">
+                <div class="col-sm-6">
                   <h2 class="text-start ps-3">Weather app</h2>
                   <p class="bg-white text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p> 
                   <a href="#" class="app-link m-20 py-20 px-15 text-start">Launch Weather App</a>
                 </div> 
                 
-                <div class="col-sm-6  ">
-                    <img src="https://31ukq.csb.app/images/weather.png" class="img-fluid rounded" alt="yoga">
+                <div class="col-sm-6">
+                    <img src="https://31ukq.csb.app/images/weather.png" class="img-fluid rounded small-photo" alt="yoga">
                   </div>
                 </div>
           </div> 
@@ -85,10 +85,10 @@
         <br />
         <div class="container">
             <div class="row">
-                <div class="col-sm-6  ">
-                  <img src="https://31ukq.csb.app/images/yogurt.png" class="img-fluid rounded" alt="yoga">
+                <div class="col-sm-6">
+                  <img src="https://31ukq.csb.app/images/yogurt.png" class="img-fluid rounded small-photo" alt="yoga">
                 </div>
-                <div class="col-sm-6  ">
+                <div class="col-sm-6">
                   <h2 class="text-start ps-3">Yogurt app</h2>
                   <p class="bg-white text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
                 <a href="#" class="app-link m-20 py-20 px-15 text-start">Launch Yogurt App</a>
